# screeen

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  package.json  rustfmt.toml
.github/workflows/: audit.yml  build.yml  release.yml
screeen-core/: Cargo.toml
screeen-core/src/: cli.rs  main.rs  server.rs
screeen-web/: Cargo.toml  build.rs
screeen-web/src/: lib.rs
screeen-web/web/: package.json  vite.config.ts
screeen-web/web/src/: App.vue  main.ts  router.ts
screeen-web/web/src/components/: HelloWorld.vue
screeen-web/web/src/pages/: index.vue
